# Django_task

./: .env  README.md  pyproject.toml
Task/: db.sqlite3
Task/Task/: settings.py  urls.py
Task/myapp/: models.py  serializers.py  views.py
Task/myapp/migrations/: 0001_initial.py
